Initial commit of my CV files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#"><i class='bx bxl-github'></i></box-icon></a>
                 </div>
                 <div class="btn-group">
-                     <a href="MartaMiozgaCV.pdf" download="MartaMiozgaCV.pdf" class="btn">Download CV</a>
+                     <a href="" download="" class="btn">Download CV</a>
                     <a href="#contact" class="btn">Contact</a>
                 </div>
             </div>
