Initial commit of my CV files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
                 <div class="home-img">
-                    <img src="/images/CVphoto.jpg" alt="">
+                    <img src="./images/CVphoto.jpg" alt="">
                 </div>
         </section>
 
