Initial commit of my CV files

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <h1>Hello, I'm <span> Marta Miozga</span></h1>
                 <h3 class="text-animation">I'm a <span></span></h3>
                  <div class="social-icons">
-                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></box-icon></a>
+                    <a href="https://github.com/miiozia/Projects"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://www.linkedin.com/in/marta-miozga-76277a26b/"><i class='bx bxl-github'></i></box-icon></a>
                 </div>
                 <div class="btn-group">
                      <a href="" download="" class="btn">Download CV</a>
