--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="timeline-date">2025 - present</div>
                         <div class="timeline-content">
                             <h3>Silesian University of Technology</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique veniam voluptates fuga unde, officiis assumenda repellat maxime! Quis, minima facilis?</p>
+                            <p>Master's degree in Computer Science</p>
                         </div>
                     
                 </div>
